--- a/style.css
+++ b/style.css
@@ -15,3 +15,16 @@ body {background-color:white;
 		font-family: 'Open Sans', sans-serif;
 		font-size:100%;
 	}
+
+/*BLUR*/
+.blur img {
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+       -o-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+          transition: all 1s ease;
+}
+ 
+.blur img:hover {
+  -webkit-filter: blur(5px);
+}
