--- a/style.css
+++ b/style.css
@@ -16,6 +16,29 @@ body {background-color:white;
 		font-size:100%;
 	}
 
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+      -ms-box-sizing: border-box;
+          box-sizing: border-box;
+}
+ 
+body {
+  background: #333;
+}
+ 
+.pic {
+  border: 10px solid #fff;  
+  float: left;
+  height: 300px;
+  width: 300px;
+  margin: 20px;
+  overflow: hidden;
+   
+  -webkit-box-shadow: 5px 5px 5px #111;
+          box-shadow: 5px 5px 5px #111;  
+}
+
 /*BLUR*/
 .blur img {
   -webkit-transition: all 1s ease;
