--- a/style.css
+++ b/style.css
@@ -4,36 +4,14 @@ html, body {
     margin: 0;
     padding: 0;
 	text-align:center;
+	background-color:white;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	color:dimgray
 }
 /*background-color:white;*/
-	h1 {color:dimgray;
-		font-family: 'Open Sans', sans-serif;
-		font-size:200%;
-	}
-	h2 {color:dimgray;
-		font-family: 'Open Sans', sans-serif;
-		font-size:150%;
-	}
-	h3 {color:dimgray;
-		font-family: 'Open Sans', sans-serif;
-		font-size:100%;
-	}
 
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: Futura;
-    font-size: 20px;
-    color: #5d5d5d;
-    text-align: center;
-}
-
-.image-panel { 
+/*.image-panel { 
     width: 100%;
     height: 50%;
     display: block;
@@ -84,10 +62,10 @@ html, body {
     /*
     -webkit-box-shadow: 0px 1px 8px 0px rgba(50, 50, 50, 0.75);
     -moz-box-shadow:    0px 1px 8px 0px rgba(50, 50, 50, 0.75);
-    box-shadow:         0px 1px 8px 0px rgba(50, 50, 50, 0.75);*/
-}
+    box-shadow:         0px 1px 8px 0px rgba(50, 50, 50, 0.75);
+}*/
 
-#backgroundtop img{ margin: 0 auto; display: block;}
+/*#backgroundtop img{ margin: 0 auto; display: block;}
 
 #title{
     margin: 0; !important
@@ -106,9 +84,9 @@ html, body {
      -moz-box-sizing: border-box;
       -ms-box-sizing: border-box;
           box-sizing: border-box;
-}
+}*/
  
-body {
+/*body {
   background: #333;
 }
  
@@ -125,7 +103,7 @@ body {
 }
 
 /*BLUR*/
-.blur img {
+/*.blur img {
   -webkit-transition: all 1s ease;
      -moz-transition: all 1s ease;
        -o-transition: all 1s ease;
@@ -135,4 +113,4 @@ body {
  
 .blur img:hover {
   -webkit-filter: blur(5px);
-}
+}*/
