--- a/style.css
+++ b/style.css
@@ -10,6 +10,54 @@ html, body {
 	color:dimgray
 }
 
+img {
+border : 0;
+max-width: 100%;
+min-width: 75%;
+height: auto;
+width: auto\9; /* ie8 */
+}
+
+img.floatleft { float: left; margin: 0 10px 0 0; }
+img.floatright { float: right; margin: 0 0 0 10px; }
+
+.twocolumns{
+	-moz-column-count: 2;
+	-moz-column-gap: 2em;
+	-webkit-column-count: 2;
+	-webkit-column-gap: 2em;
+	column-count: 2;
+	column-gap: 2em;
+  }
+
+p.subcaption {
+color: #929292;	
+text-align: center;
+font-size: 1em;
+line-height: 1.3em;
+margin: 5px auto 30px auto;
+}
+
+.shrink {
+  display: inline-block;
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: transform;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+
+.shrink:hover,
+.shrink:active,
+.shrink:focus {
+  -webkit-transform: scale(0.98);
+  -ms-transform: scale(0.98);
+  transform: scale(0.98);
+}
+
 /*.image-panel { 
     width: 100%;
     height: 50%;
