--- a/style.css
+++ b/style.css
@@ -10,16 +10,16 @@ html, body {
 	color:dimgray
 }
 
-/*img {
+img {
 border : 0;
-max-width: 100%;
+/*max-width: 100%;
 min-width: 75%;
 height: auto;
-width: auto\9; /* ie8 */
-/*}
+width: auto\9; /* ie8 */*/
+}
 
 img.floatleft { float: left; margin: 0 10px 0 0; }
-img.floatright { float: right; margin: 0 0 0 10px; }*/
+img.floatright { float: right; margin: 0 0 0 10px; }
 
 
 p.subcaption {
