--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body {
+h1, h2, h3, h4, h5 {
 	height: 100%;
     width: 100%;
     margin: 0;
@@ -6,8 +6,49 @@ html, body {
 	text-align:center;
 	background-color:white;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 20px;
 	color:dimgray
+}
+
+h1 {
+	font-family: 'Open Sans', sans-serif;
+	margin-top: : 0.5 em;
+	color:dimgray
+	font-size: 20px;
+	text-align:center;
+	text-decoration: : none;
+}
+
+h2 {
+	font-family: 'Open Sans', sans-serif;
+	margin-top: : 0.5 em;
+	color:dimgray
+	font-size: 15px;
+	text-align:center;
+	text-decoration: : none;
+}
+h3 {
+	font-family: 'Open Sans', sans-serif;
+	margin-top: : 0.5 em;
+	color:dimgray
+	font-size: 15px;
+	text-align:center;
+	text-decoration: : none;
+}
+h4 {
+	font-family: 'Open Sans', sans-serif;
+	margin-top: : 0.5 em;
+	color:dimgray
+	font-size: 15px;
+	text-align:center;
+	text-decoration: : none;
+}
+h5 {
+	font-family: 'Open Sans', sans-serif;
+	margin-top: : 0.5 em;
+	color:dimgray
+	font-size: 10px;
+	text-align:center;
+	text-decoration: : none;
 }
 
 img {
