--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, h5 {
+html,body {
 	height: 100%;
     width: 100%;
     margin: 0;
@@ -7,49 +7,9 @@ h1, h2, h3, h4, h5 {
 	background-color:white;
 	font-family: 'Open Sans', sans-serif;
 	color:dimgray
-}
-
-h1 {
-	font-family: 'Open Sans', sans-serif;
-	margin-top: : 0.5 em;
-	color:dimgray
 	font-size: 20px;
-	text-align:center;
-	text-decoration: : none;
 }
 
-h2 {
-	font-family: 'Open Sans', sans-serif;
-	margin-top: : 0.5 em;
-	color:dimgray
-	font-size: 15px;
-	text-align:center;
-	text-decoration: : none;
-}
-h3 {
-	font-family: 'Open Sans', sans-serif;
-	margin-top: : 0.5 em;
-	color:dimgray
-	font-size: 15px;
-	text-align:center;
-	text-decoration: : none;
-}
-h4 {
-	font-family: 'Open Sans', sans-serif;
-	margin-top: : 0.5 em;
-	color:dimgray
-	font-size: 15px;
-	text-align:center;
-	text-decoration: : none;
-}
-h5 {
-	font-family: 'Open Sans', sans-serif;
-	margin-top: : 0.5 em;
-	color:dimgray
-	font-size: 10px;
-	text-align:center;
-	text-decoration: : none;
-}
 
 img {
 border : 0;
