--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 	text-align:center;
 	background-color:white;
 	font-family: 'Open Sans', sans-serif;
-	color:dimgray
+	color:dimgray;
 	font-size: 20px;
 }
 
