--- a/style.css
+++ b/style.css
@@ -22,18 +22,33 @@ width: auto\9; /* ie8 */*/
 img.floatleft { float: left; margin: 0 10px 0 0; }
 img.floatright { float: right; margin: 0 0 0 10px; }
 
-.outer {
-    text-align: justify;
-}
-.outer img {
-    display: inline-block;
-    vertical-align: center;
-}
-.outer .fix {
-    width: 100%;
-    height: 0;
-    display: inline-block;
-}
+#image-container { 
+  min-width:782px; /* width of 3 images (746px) plus images' padding and border (36px) */ 
+  padding:10px; 
+  border:1px solid #d3d2d2; 
+  background-color:#f0f0f0; 
+ } 
+#image-container img { 
+  padding:5px; 
+  border:1px solid #d3d2d2; 
+  background-color:#fff;  
+ } 
+#image-right { 
+  float:right; 
+  width:250px; 
+  height:49px; 
+ } 
+#image-left { 
+  float:left; 
+  width:250px; 
+  height:36px; 
+ } 
+#image-center { 
+  display:block; 
+  width:246px; 
+  height:59px; 
+  margin:auto; 
+ } 
 
 
 
