--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 html, body {
 	height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 	text-align:center;
 	background-color:white;
 	font-family: 'Open Sans', sans-serif;
@@ -16,39 +16,24 @@ border : 0;
 /*max-width: 100%;
 min-width: 75%;
 height: auto;
-width: auto\9; /* ie8 */*/
+width: auto\9; /* ie8 */
 }
 
 img.floatleft { float: left; margin: 0 10px 0 0; }
 img.floatright { float: right; margin: 0 0 0 10px; }
 
-#image-container { 
-  min-width:782px; /* width of 3 images (746px) plus images' padding and border (36px) */ 
-  padding:10px; 
-  border:1px solid #d3d2d2; 
-  background-color:#f0f0f0; 
- } 
-#image-container img { 
-  padding:5px; 
-  border:1px solid #d3d2d2; 
-  background-color:#fff;  
- } 
-#image-right { 
-  float:right; 
-  width:250px; 
-  height:49px; 
- } 
-#image-left { 
-  float:left; 
-  width:250px; 
-  height:36px; 
- } 
-#image-center { 
-  display:block; 
-  width:246px; 
-  height:59px; 
-  margin:auto; 
- } 
+.outer {
+    text-align: justify;
+}
+.outer img {
+    display: inline-block;
+    vertical-align: center;
+}
+.outer .fix {
+    width: 100%;
+    height: 0;
+    display: inline-block;
+}
 
 
 
