--- a/style.css
+++ b/style.css
@@ -1,13 +1,28 @@
-html, body {
-	height: 100%;
+body {
+  height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
-	text-align:center;
-	background-color:white;
-	font-family: 'Open Sans', sans-serif;
-	color:dimgray;
-	font-size: 20px;
+  background-color:white;
+  font-family: 'Open Sans', sans-serif;
+  color:dimgray;
+}
+
+h1 {
+  font-size: 20px;
+  text-align:center;
+}
+
+h2 {
+  font-size: 10px;
+}
+
+h3 {
+  font-size: 10px;
+}
+
+h4 {
+  font-size: 10px;
 }
 
 
@@ -19,8 +34,8 @@ height: auto;
 width: auto\9; /* ie8 */
 }
 
-img.floatleft { float: left; margin: 0 10px 0 0; }
-img.floatright { float: right; margin: 0 0 0 10px; }
+/*img.floatleft { float: left; margin: 0 10px 0 0; }
+img.floatright { float: right; margin: 0 0 0 10px; }*/
 
 .outer {
     text-align: justify;
@@ -33,16 +48,6 @@ img.floatright { float: right; margin: 0 0 0 10px; }
     width: 100%;
     height: 0;
     display: inline-block;
-}
-
-
-
-p.subcaption {
-color: dimgray;	
-text-align: center;
-font-size: 1em;
-line-height: 1.3em;
-margin: 5px auto 30px auto;
 }
 
 .shrink {
