--- a/style.css
+++ b/style.css
@@ -6,28 +6,26 @@ body {
   background-color:white;
   font-family: 'Open Sans', sans-serif;
   color:dimgray;
+  text-align:center;
 }
 
 h1 {
   font-size: 25px;
-  text-align:center;
-}
-
-#navbar {
-  text-align: center;
-  font-size: 20px;
 }
 
 h2 {
   font-size: 10px;
+  text-align: left;
 }
 
 h3 {
   font-size: 10px;
+  text-align: center;
 }
 
 h4 {
   font-size: 10px;
+  text-align: right;
 }
 
 
