--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ h4 {
   font-size: 15px;
 }
 
+h5 {
+  font-size: 12px;
+}
+
 
 img {
 border : 0;
@@ -36,19 +40,6 @@ width: auto\9; /* ie8 */
 
 /*img.floatleft { float: left; margin: 0 10px 0 0; }
 img.floatright { float: right; margin: 0 0 0 10px; }*/
-
-.outer {
-    text-align: justify;
-}
-.outer img {
-    display: inline-block;
-    vertical-align: center;
-}
-.outer .fix {
-    width: 100%;
-    height: 0;
-    display: inline-block;
-}
 
 .shrink {
   display: inline-block;
