--- a/styleblog.css
+++ b/styleblog.css
@@ -20,11 +20,11 @@ h2 {
 h3 {
   font-size: 20px;
   text-align: left;
-  padding: 2em;
+  margin-left: 2em;
 }
 
 p {
   font-size: 15px;
   text-align: left;
-  padding: 3em;
+  margin-left: 4em;
 }
