--- a/styleblog.css
+++ b/styleblog.css
@@ -20,12 +20,13 @@ h2 {
 h3 {
   font-size: 20px;
   text-align: left;
-  margin-left: 2em;
+  margin-left: 4em;
 }
 
 p {
   font-size: 15px;
   text-align: left;
-  margin-left: 4em;
-  margin-right: 4em;
+  margin-left: 6em;
+  margin-right: 6em;
+  color:dimgray;
 }
