--- a/styleblog.css
+++ b/styleblog.css
@@ -23,8 +23,12 @@ h3 {
   margin-left: 4em;
 }
 
+h4 {
+  font-size: 12px;
+}
+
 p {
-  font-size: 15px;
+  font-size: 12px;
   text-align: left;
   margin-left: 6em;
   margin-right: 6em;
