--- a/style/style.css
+++ b/style/style.css
@@ -105,6 +105,7 @@ h6 a {
 	color: inherit; 
 }
 h1 { 
+	font-family: 'Open Sans', sans-serif;
 	font-size: 32px; 
 	line-height: 34px; 
 	margin-bottom: 14px;
@@ -360,7 +361,7 @@ object {
 } */
 
 .intro {
-	font-family: 'MerriweatherRegular';
+	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	line-height: 32px;
 	color: #a0a0a0;
