--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -7,24 +9,22 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
 	border: 0;
-	font: 'Open Sans';
+	font-family: inherit;
 	font-size: 100%;
-	color:dimgray;
-	background-color: white;
-	font-weight: bold;
+	font-style: inherit;
+	font-weight: inherit;
 	margin: 0;
 	outline: 0;
 	padding: 0;
-	text-align: center;
 	vertical-align: baseline;
 }
 :focus {/* remember to define focus styles! */
 	outline: 0;
 }
-/*body {
+body {
 	background: #fff;
 	line-height: 1;
-}*/
+}
 ol, ul {
 	list-style: none;
 }
@@ -81,7 +81,8 @@ body, input, textarea {
 	font: 15px 'Open Sans', sans-serif;
 	font-weight: normal;
 	line-height: 27px;
-	color: dimgray;
+	background: #2e2e2e url(style/images/bg1.jpg) repeat fixed;
+	color: #6b6b6b;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
 }
@@ -93,8 +94,9 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Open Sans', sans-serif;
-	color: dimgray;
+	font-family: 'Open Sans';
+	font-weight: normal;
+	color: #ca6d6d;
 }
 h1 a, 
 h2 a, 
@@ -105,7 +107,6 @@ h6 a {
 	color: inherit; 
 }
 h1 { 
-	font-family: 'Open Sans', sans-serif;
 	font-size: 32px; 
 	line-height: 34px; 
 	margin-bottom: 14px;
@@ -231,7 +232,7 @@ sub {
 	margin: 0;
 	margin:15px 8px 0 0;
 	text-transform: uppercase;
-	font-family: 'MarketDecoRegular';
+	font-family: 'Open Sans';
 }
 
 .lite1 {
@@ -361,7 +362,7 @@ object {
 } */
 
 .intro {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans';
 	font-size: 20px;
 	line-height: 32px;
 	color: #a0a0a0;
@@ -542,7 +543,7 @@ input#s {
     border: 1px solid #a3a3a3;
     border-right: 0;
     color: #a0a0a0;
-    font-family: 'MerriweatherRegular';
+    font-family: 'Open Sans';
     font-size: 12px;
     display: block;
     float: left;
@@ -564,7 +565,7 @@ input#s {
     border-right: 0;
     color: #a0a0a0;
     float: right;
-    font-family: 'MerriweatherRegular';
+    font-family: 'Open Sans';
     font-size: 12px;
 }
 .social input.search-submit-button {
@@ -611,7 +612,7 @@ input#s {
 	list-style: none;
 	font-weight: normal;
 	position: relative;
-	font-family: 'MarketDecoRegular';	
+	font-family: 'Open Sans';	
 }
 #access .menu ul {
 	margin: 0;
@@ -1280,7 +1281,7 @@ input[type=text] {
 	right: 20px;
 	text-decoration: none;
 	top: 10px;
-	font-family: 'MerriweatherRegular';
+	font-family: 'Open Sans';
 }
 #cancel-comment-reply-link:hover,
 #respond #cancel-comment-reply-link:hover {
@@ -1787,7 +1788,7 @@ ul.tabs li a {
 	padding: 13px 15px 10px 15px;
 	background: #fff;
 	color: #6B6B6B;
-	font-family: 'MarketDecoRegular';
+	font-family: 'Open Sans';
 	font-size: 18px;
 }
 
