--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	outline: 0;
 	padding: 0;
 	vertical-align: baseline;
+	text-align: center;
 }
 :focus {/* remember to define focus styles! */
 	outline: 0;
