--- a/style/style.css
+++ b/style/style.css
@@ -82,8 +82,8 @@ body, input, textarea {
 	font: 15px 'Open Sans', sans-serif;
 	font-weight: normal;
 	line-height: 27px;
-	background: #2e2e2e url(style/images/bg1.jpg) repeat fixed;
-	color: #6b6b6b;
+	background: dimgray url(style/images/bg1.jpg) repeat fixed;
+	color: dimgray;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
 }
@@ -97,7 +97,7 @@ h5,
 h6 {
 	font-family: 'Open Sans';
 	font-weight: normal;
-	color: #ca6d6d;
+	color: dimgray;
 }
 h1 a, 
 h2 a, 
