--- a/style/style.css
+++ b/style/style.css
@@ -91,9 +91,8 @@ body, input, textarea {
 /* Headings */
 h1 {
 	font-family: 'Open Sans';
-	font-weight: normal;
 	color: dimgray;
-	font-style: bold;
+	font-weight: bolder;
 } 
 h2,
 h3,
