--- a/style/style.css
+++ b/style/style.css
@@ -82,8 +82,8 @@ body, input, textarea {
 	font: 15px 'Open Sans', sans-serif;
 	font-weight: normal;
 	line-height: 27px;
-	background: dimgray url(style/images/bg1.jpg) repeat fixed;
-	color: dimgray;
+	background: #2f2f2f url(style/images/bg1.jpg) repeat fixed;
+	color: #2f2f2f;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
 }
