--- a/style/style.css
+++ b/style/style.css
@@ -91,7 +91,7 @@ body, input, textarea {
 /* Headings */
 h1 {
 	font-family: 'Open Sans';
-	color: #474747;
+	color: #5e5e5e;
 	font-weight: bolder;
 } 
 h2,
@@ -101,7 +101,7 @@ h5,
 h6 {
 	font-family: 'Open Sans';
 	font-weight: normal;
-	color: #474747;
+	color: #5e5e5e;
 }
 h1 a, 
 h2 a, 
