--- a/style/style.css
+++ b/style/style.css
@@ -102,6 +102,7 @@ h6 {
 	font-family: 'Open Sans';
 	font-weight: normal;
 	color: #5e5e5e;
+	font-weight: bold;
 }
 h1 a, 
 h2 a, 
@@ -117,7 +118,7 @@ h1 {
 	margin-bottom: 14px;
 }
 h2 { 
-	font-size: 20px; 
+	font-size: 18px; 
 	line-height: 22px; 
 	margin-bottom: 5px; 
 }
@@ -127,7 +128,7 @@ h3 {
 	margin-bottom: 15px; 
 } 
 h4 { 
-	font-size: 20px; 
+	font-size: 18px; 
 	line-height: 22px; 
 	margin-bottom: 5px; 
 } 
