--- a/style/style.css
+++ b/style/style.css
@@ -765,7 +765,7 @@ input#s {
 	text-align: center;
 }
 .entry-title {
-	color: #ca6d6d;
+	color: #5e5e5e;
 	margin: 0 0 5px 0;
 	font-size: 28px; 
 }
