--- a/style/style.css
+++ b/style/style.css
@@ -201,7 +201,7 @@ pre {
 	padding: 0.75em 20px;*/
 	font-family: 'Open Sans';
 	font-weight: normal;
-	color: #5e5e5e;
+	color: dimgray;
 	text-align: left;
 }
 code, kbd {
