--- a/style/style.css
+++ b/style/style.css
@@ -523,7 +523,7 @@ object {
 	display: block;
 }
 
-.social {
+/*.social {
 	position: absolute;
 	top:51px;
 	right: 39px;
@@ -584,162 +584,6 @@ input#s {
     font-size: 12px;
     display: block;
     float: left;
-}
-
-.social .widget_search .search-text-box {
-    -moz-transition: 400ms width ease;
-    -webkit-transition-duration: 400ms;
-    -webkit-transition-property: width;
-    -webkit-transition-timing-function: ease;
-    -o-transition-duration: 400ms;
-    -o-transition-property: width;
-    -o-transition-timing-function: ease;
-    height: 21px;
-    padding: 0 5px 2px 5px !important;
-    width: 45px;
-    background-color: transparent;
-    border: 1px solid #a3a3a3;
-    border-right: 0;
-    color: #a0a0a0;
-    float: right;
-    font-family: 'Open Sans';
-    font-size: 12px;
-}
-.social input.search-submit-button {
-	 float: right;
-	 border: none;
-	 background: #404040 url(style/images/icon-search.png) center center no-repeat;
-	 height: 25px;
-	 width: 25px;
-	 text-indent: -99999px;
-	 cursor: pointer;
-}
-.social .widget_search .search-text-box:focus {
-    width: 150px;
-}
-
-/*-----------------------------------------------------------------------------------*/
-/*	MENU
-/*-----------------------------------------------------------------------------------*/
-
-/*.triangle-l {
-	border-color: transparent #793e3e transparent transparent;
-	border-style:solid;
-	border-width:8px;
-	height:0px;
-	width:0px;
-	position: relative;
-	left: -17px;
-	top: -8px;
-	z-index: -1; /* displayed under bubble */
-}
-
-/*.triangle-r {
-	border-color: transparent transparent transparent #793e3e;
-	border-style:solid;
-	border-width:8px;
-	height:0px;
-	width:0px;
-	position: relative;
-	left: 1039px;
-	top: -23px;
-	z-index: -1; /* displayed under bubble */
-}
-/*#access .menu {
-	list-style: none;
-	font-weight: normal;
-	position: relative;
-	font-family: 'Open Sans';	
-}
-#access .menu ul {
-	margin: 0;
-	list-style-type: none;
-	letter-spacing: normal;
-	position: relative;
-	text-align: center;
-	z-index: 1001;
-	height: 42px;
-	margin: 0 -9px;
-	background: #b05a5a url(style/images/menu-bg.png) repeat-x;
-	-webkit-box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
-	-moz-box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
-	box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
-}
-#access .menu ul li {
-	position: relative;
-	display: inline-block;
-	padding: 0 15px;
-	z-index: 101;
-	padding-top: 8px;
-	background: none;
-	height: 34px;
-}
-#access .menu ul li a {
-	display: inline-block;
-	text-decoration: none;
-	font-size: 14px;
-	line-height: 1;
-	color: #f3f3f3;
-	-webkit-transition:all 100ms ease-in;
-	-o-transition:all 100ms ease-in;
-	-moz-transition:all 100ms ease-in;
-}
-#access .menu ul li a:hover, 
-#access .menu ul li.active a, 
-#access .menu ul li a.selected {
-	color: #3c3c3c;
-}
-#access .menu ul li ul {
-	position: absolute;
-	left: 0;
-	height: auto;
-	display: none;
-	visibility: hidden;
-	width: 130px;
-	padding: 0;
-	text-align: left;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-	background: none;
-}
-#access .menu ul li ul li {
-	display: list-item;
-	float: none;
-	background: none;
-	padding: 0;
-	height: auto;
-	border-bottom: 1px solid #333;
-}
-#access .menu ul li ul li ul {
-	top: 0;
-}
-#access .menu ul li ul li a {
-	margin: 0;
-	border: none;
-	display: block;
-	padding: 10px 10px;
-	font-size: 12px;
-	color: #f3f3f3;
-	background-color: #3c3c3c;
-}
-#access .menu ul li ul li a:hover,
-#access .menu ul li ul li.active a,
-#access .menu ul li ul li a.selected {
-	background-color: #333;
-	color: #f3f3f3;
-}
-#access .menu ul li ul li:last-child {
-	border: none;
-}
-* html #access .menu {
-	height: 1%;
-}
-
-.selectnav {
-	display: none;
-	width: 280px;
-	margin: 0 auto;
 }
 
 
