--- a/style/style.css
+++ b/style/style.css
@@ -143,13 +143,13 @@ h6 {
 
 /* Horizontal Line */
 hr {	
-	/*background: transparent url(style/images/line.png) repeat-x bottom left;*/
-	border: 0;
+	/*border: 0;
 	height: 1px;
 	margin-top: 20px;
-	margin-bottom: 40px;
+	margin-bottom: 40px;*/
 	color: gray;
 	width: 80%;
+	background: transparent url(style/images/line.png) repeat-x center bottom;
 }
 
 /* Text elements */
@@ -195,12 +195,6 @@ blockquote {
 	padding-left: 20px;
 }
 pre {
-	/*background: #FFF;
-	font: 13px "Courier 10 Pitch", Courier, monospace;
-	line-height: 1.5;
-	margin-bottom: 40px;
-	overflow: auto;
-	padding: 0.75em 20px;*/
 	font-family: 'Open Sans';
 	font-weight: normal;
 	color: dimgray;
@@ -322,7 +316,7 @@ a:hover {
 }
 
 /* Button */
-a.button,
+/*a.button,
 input#submit,
 .forms fieldset .btn-submit  {
 	background: #555 url(style/images/button-bg.png) repeat-x;
@@ -346,7 +340,7 @@ input#submit  {
 	font-size: 12px;
 	height: 30px;
 	padding-bottom: 5px;
-}
+}*/
 
 
 /* Alignment */
@@ -391,12 +385,6 @@ img.alignright,
 img.aligncenter {
 	margin-bottom: 20px;
 }
-/* 
-embed,
-iframe,
-object {
-	max-width: 100%;
-} */
 
 .intro {
 	font-family: 'Open Sans';
@@ -523,69 +511,6 @@ object {
 	display: block;
 }
 
-/*.social {
-	position: absolute;
-	top:51px;
-	right: 39px;
-	min-width: 500px;
-}
-
-.social ul {
-	float: right;
-	list-style: none;
-}
-
-.social ul li {
-	float: left;
-	margin-right: 5px;
-	padding: 0;
-	background: none;
-}
-
-.social ul li img {
-	display: block;
-}
-
-form#searchform {
-	width: 300px;
-}
-
-.no-results form#searchform {
-	padding: 10px 0 0 0;
-}
-
-form#searchform:after {
-	content: '';
-	display: block;
-	height: 0;
-	clear: both;
-	visibility: hidden;
-}
-
-input#searchsubmit {
-	 float: right;
-	 border: none;
-	 background: #404040 url(style/images/icon-search.png) center center no-repeat;
-	 height: 25px;
-	 width: 25px;
-	 text-indent: -99999px;
-	 cursor: pointer;
-}
-
-input#s {
-    height: 21px;
-    padding: 0 5px 2px 5px;
-    width: 264px;
-    background-color: transparent;
-    border: 1px solid #a3a3a3;
-    border-right: 0;
-    color: #a0a0a0;
-    font-family: 'Open Sans';
-    font-size: 12px;
-    display: block;
-    float: left;
-}
-
 
 
 /*-----------------------------------------------------------------------------------*/
@@ -597,14 +522,6 @@ input#s {
 	padding-bottom: 20px;
 	margin-bottom: 40px;
 	background: transparent url(style/images/line.png) repeat-x center bottom;
-}
-
-.hentry footer.entry-meta {
-	display: none;
-}
-
-.no-results {
-	margin-bottom: 40px;
 }
 
 .page-title {
@@ -1312,36 +1229,6 @@ p.form-submit {
 
 #nav-single {
 	text-align: center;
-}
-
-/* Page-Navigation Buttons */
-/*.page-navi {
-	list-style: none;
-	text-align: center;
-}
-.page-navi li {
-	display: inline;
-	background: none;
-	padding: 0;
-}
-.page-navi li a {
-	background: #555 url(style/images/button-bg.png) repeat-x;
-	height: 28px;
-	line-height: 25px;
-	display: inline-block;
-	padding: 0 10px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	border: 1px solid #383838;
-	color: #fff;
-	margin: 0 1px; 
-	font-size: 12px;
-}
-.page-navi li a:hover, .page-navi li a.current {
-	background-color: #333;
-	border: 1px solid #242424;
-	text-decoration: none;
 }
 
 
